fixed mobile number not displaying on safari

--- a/styles.css
+++ b/styles.css
@@ -682,7 +682,15 @@ textarea::placeholder {
   height: 20px;
   text-align: center;
 }
-
+.contact2 a[href^="tel"] {
+  color: rgb(23, 12, 85);
+  text-decoration: none;
+}
+.contact2 a {
+  color: rgb(23, 12, 85) !important;
+  font-size: 20px;
+  font-weight: 500;
+}
 .modal-container {
   width: 100%;
   height: 100%;
